@@ -43,7 +43,7 @@
 #include <dmalloc.h>
 #endif
 
-/* WARNING: all lump add/insert operations excpect a pkg_malloc'ed char* 
+/* WARNING: all lump add/insert operations expect a pkg_malloc'ed char* 
  * pointer the will be DEALLOCATED when the sip_msg is destroyed! */
 
 enum lump_dir { LD_NEXT, LD_BEFORE, LD_AFTER };
