@@ -880,8 +880,10 @@ static void sig_usr(int signo)
 	}else{
 		/* process the important signals */
 		switch(signo){
-			case SIGINT:
 			case SIGPIPE:
+					LOG(L_INFO, "INFO: signal %d received\n", signo);
+				break;
+			case SIGINT:
 			case SIGTERM:
 					LOG(L_INFO, "INFO: signal %d received\n", signo);
 					/* print memory stats for non-main too */
@@ -1280,11 +1282,6 @@ try_again:
 	DBG("test random number %u\n", rand());
 	
 	
-	/* init hash fucntion */
-	if (init_hash()<0) {
-		LOG(L_ERR, "ERROR: init_hash failed\n");
-		goto error;
-	}
 
 	/*init mallocs (before parsing cfg !)*/
 	if (init_mallocs()==-1)
