@@ -34,7 +34,8 @@
 
 /* "public" functions*/
 
-struct tcp_connection* tcpconn_get(int id, struct ip_addr* ip, int port);
+struct tcp_connection* tcpconn_get(int id, struct ip_addr* ip, int port, 
+									int timeout);
 void tcpconn_put(struct tcp_connection* c);
 int tcp_send(char* buf, unsigned len, union sockaddr_union* to, int id);
 
